# blokus-ai

./: .gitignore  README.md  pyproject.toml
blokus_ai/: __init__.py
blokus_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
blokus_ai/agents/: __init__.py  adaptive_weighted_blocking_agent.py  base.py  blocking_agent.py  largest_first_agent.py  random_agent.py  rl_policy_agent.py  strategic_heuristic_agent.py  weighted_blocking_agent.py
blokus_ai/core/: __init__.py  board.py  coords.py  game_state.py  move.py  move_generation.py  pieces.py  rules.py  transforms.py
blokus_ai/experiments/: __init__.py  agent_comparison.py  benchmark.py  genetic_tuning.py  human_match.py  random_agent_benchmark.py  rl_self_play.py  self_play.py  tournament.py
blokus_ai/rl/: __init__.py  agent.py  encoding.py  environment.py  torch_policy.py
blokus_ai/ui/: __init__.py  ascii_renderer.py  pygame_viewer.py  web_viewer.py
tests/: test_agent_comparison.py  test_agents.py  test_benchmark.py  test_experiments.py  test_generation.py  test_genetic_tuning.py  test_render.py  test_rl.py  test_rules.py  test_self_play.py  test_torch_policy.py  test_transforms.py
