[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blokus-ai"
version = "0.1.0"
description = "Initial Blokus engine primitives."
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.5",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
