[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blokus-ai"
version = "0.1.0"
description = "Initial Blokus engine primitives."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "pygame>=2.5",
    "pytest>=8.0",
    "torch>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
